--- a/dono/index.html
+++ b/dono/index.html
@@ -39,7 +39,7 @@
   <header>
     <div class="quote text-center">
       <h1 class="title"><font class="clear">Animat<font class="letterspace-sp"> </font><font class="thin">Habitat</font></font></h1>
-      <h3>Donate<font class="fr">&nbsp;&#92;&nbsp;Don</font></h3>
+      <h3>Patron</h3>
 
     </div>
 
