--- a/princeps/index.html
+++ b/princeps/index.html
@@ -103,9 +103,11 @@
           <h5>2019</h5>
           <div class="clear diptych">
             <div class="clear-left clear-top">
-              <p><a href="../url/tw/mumilaaqqaqqaq/" title="Twitter / ᒧᒥᓛᖅ ᖃᖅᑲᖅ Mumilaaq Qaqqaq" target="_blank" rel="noopener">Mumilaaq Qaqqaq</a>, member of Parliament for Nunavut assumed office October 2019.</p>
+              <p>Mumilaaq Qaqqaq, member of Parliament for Nunavut assumed office October 2019.</p>
               <p>Recognized for her progressive leadership in Canada.</p>
               <p><font class="fr">Reconnue pour sa direction progressiste au Canada.</font></p>
+
+              <!-- <a href="../url/tw/mumilaaqqaqqaq/" title="Twitter / ᒧᒥᓛᖅ ᖃᖅᑲᖅ Mumilaaq Qaqqaq" target="_blank" rel="noopener"> -->
 
             </div>
 
