--- a/scene/one/history-of-elephants-anatomy/index.html
+++ b/scene/one/history-of-elephants-anatomy/index.html
@@ -172,9 +172,13 @@
       <div>
         <p>African elephant ears appear to resemble the shape of the African continent. This is different from Asian elephant ears which resemble the shape of India in Southwest Asia where they are found. Of course all elephants use their ears to hear. Elephants make &ndash; and listen for &ndash; a range of vocalizations, from high-pitched trumpets to infrasonic rumbles that resonate from miles away. Digital cushions on the soles of their feet indeed sense these distant rumbles, and then the skeletal structures of elephant forelegs and scapulae conduct these as vibrations to the inner ear.<sup>&nbsp;[<a class="button" onclick="fn_2();" title="Poole and Granli, Elephant Voices">3</a>]</sup></p>
 
+        <!-- Not only can elephants hear thudding rumbles, but they can pick up the vibration through their feet. Replicas of the airborne rumbles reach elephants through the ground as well. Incredibly, elephants are able to use seismic vibrations at infrasound frequencies to communicate. -->
+
         <p class="linebreak">Elephants will also display their big ears to communicate aggression and submission and so on.<sup>&nbsp;[<a class="button" onclick="fn_2();" title="Poole and Granli, Elephant Voices">5</a>]</sup></p>
 
         <p class="linebreak">Elephants display a range of emotions, including demonstrating grief at the loss of herd members. Elephants have visited and revisited the bones of past herd members long after she has passed on, even when the sites happen to fall out of the way. An elephant has a spot on the sides of his or her head, behind each eye, which is at times darkened by the secretion of glands near the temporal lobe. These temporal glands are activated when an elephant is subject to highly charged situational stress or enters into hormonal responses, such as &ldquo;musth&rdquo;.<sup>&nbsp;[<a class="button" onclick="fn_2();" title="Poole and Granli, Elephant Voices">5</a>]</sup></p>
+
+        <!-- meaning intoxicated in Urdo, an Indo-Aryan language spoken in South Asia, in India, in particular, but also a registered regional dialect in South Africa. -->
 
       </div>
 
