--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -2,7 +2,7 @@
 <html lang="en, fr">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src 'unsafe-inline'; style-src fonts.googleapis.com 'self';" />
   <meta name="google" content="notranslate" />
 
   <meta name="author" content="Dane Aleksander" />
@@ -226,7 +226,7 @@
     <article>
       <div class="project-broadcast quote">
 
-        <!-- <h3><a href="technology-ar-kit/"><font class="scene-one">Where is Augmented Reality?</font><font class="desktop"> &#47; <em>Technology</em></font></a></h3>
+        <!-- <h3><a href="companion-app-augmented-reality-kit/"><font class="scene-one">Where is Augmented Reality?</font><font class="desktop"> &#47; <em>Technology</em></font></a></h3>
         <pre class="thin"></pre> -->
 
         <!-- <h3><a href="making-of-ella-4/"><font class="scene-one">Making of Ella Ch&nbsp;4: Visual Effects</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
@@ -247,7 +247,7 @@
         <h3><a href="elephant-conservation-botswana/"><font class="scene-one">Elephant Conservation in Botswana</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="technology-documentary-2/"><font class="scene-one">Wildlife Documentary &ndash; Lights</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <h3><a href="wildlife-documentary-2/"><font class="scene-one">Wildlife Documentary &ndash; Lights</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
         <pre class="thin"></pre>
 
         <h3><a href="elephant-conservation-amboseli/"><font class="scene-one">Elephant Conservation in Amboseli</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
@@ -256,22 +256,22 @@
         <h3><a href="elephant-conservation-nairobi/"><font class="scene-one">Elephant Conservation in Nairobi</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="technology-documentary-big-tuskers/"><font class="scene-one">Big Tuskers Documentary</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="wildlife-documentary-big-tuskers/"><font class="scene-one">Big Tuskers Documentary</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="technology-documentary/"><font class="scene-one">Wildlife Documentary &ndash; Action</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="wildlife-documentary/"><font class="scene-one">Wildlife Documentary &ndash; Action</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="elephant-charter/"><font class="scene-one">A History of Elephants &ndash; Charter</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="history-of-elephants-charter/"><font class="scene-one">A History of Elephants &ndash; Charter</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="elephant-anatomy/"><font class="scene-one">A History of Elephants &ndash; Anatomy</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="history-of-elephants-anatomy/"><font class="scene-one">A History of Elephants &ndash; Anatomy</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="technology-documentary-lens/"><font class="scene-one">Wildlife Documentary &ndash; Cameras</font><font class="desktop"> &#47; <em>Technology</em></font></a></h3>
+        <h3><a href="wildlife-documentary-lens/"><font class="scene-one">Wildlife Documentary &ndash; Cameras</font><font class="desktop"> &#47; <em>Technology</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="elephant-history/"><font class="scene-one">A History of Elephants &ndash; Preface</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="history-of-elephants/"><font class="scene-one">A History of Elephants &ndash; Preface</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
         <h3><a href="making-of-ella-3/"><font class="scene-one">Making of Ella Ch&nbsp;3: Elephant</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
@@ -286,7 +286,7 @@
         <h3><a href="making-of-ella-2/"><font class="scene-one">Making of Ella Ch&nbsp;2: Scene</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="elephant-ivory/"><font class="scene-one">A History of Elephants &ndash; Ivory</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="history-of-elephants-ivory/"><font class="scene-one">A History of Elephants &ndash; Ivory</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
         <h3><a href="book-of-ella-3/"><font class="scene-one">Book of Ella Ch&nbsp;3: Comic Panel</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
@@ -298,16 +298,16 @@
         <h3><a href="book-of-ella/"><font class="scene-one">Book of Ella Ch&nbsp;1: Cover Story</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="reference-2/"><font class="scene-one">Reference Art &ndash; Imagery</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <h3><a href="reference-art-2/"><font class="scene-one">Reference Art &ndash; Imagery</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="reference/"><font class="scene-one">Reference Art &ndash; History</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="reference-art/"><font class="scene-one">Reference Art &ndash; History</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
         <h3><a href="elephant-conservation-africa/"><font class="scene-one">Elephant Conservation in Africa</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="technology-ar/"><font class="scene-one">Augmented Reality Application</font><font class="desktop"> &#47; <em>Technology</em></font></a></h3>
+        <h3><a href="companion-app-augmented-reality/"><font class="scene-one">Augmented Reality Application</font><font class="desktop"> &#47; <em>Technology</em></font></a></h3>
         <pre class="thin"></pre>
 
         <h3><a href="making-of-ella/"><font class="scene-one">Making of Ella Ch&nbsp;1: Source</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
@@ -331,14 +331,14 @@
       <p class="small">In Memoriam</p>
 
       <p class="linebreak small"><font class="title">Himba</font></p>
-      <p class="small"><font class="small">BBC <em>Natural World: Elephant Nomads Of The Namib Desert</em> (2008)</font></p>
+      <p class="small"><font class="small"><em>Natural World: Elephant Nomads Of The Namib Desert</em> (BBC documentary, 2008)</font></p>
 
       <p class="linebreak small"><font class="title">Igor &middot;&nbsp;Qumquat</font></p>
       <p class="small"><font class="small">Nick Brandt <em>On This Earth, A Shadow Falls</em> (book series, 2005, 2009)</font></p>
       <!-- Igor (2009) was killed by poachers for his ivory in Amboseli National Park, Kenya. -->
       <!-- Qumquat (1969 - 2012) slaughtered by poachers along with her two young daughters close to the border of Amboseli National Park, Kenya. -->
 
-      <p class="linebreak small"><font class="title">Satao</font></p>
+      <p class="linebreak small">          <font class="title">Satao</font></p>
       <p class="small"><font class="small">Tsavo Trust &ndash;&nbsp;Tsavo (c.1968-2014)</font></p>
       <!-- Satao (c1964 - 2016) was killed by poachers for his ivory just outside Tsavo National Park, Kenya. -->
       <!-- Satao II (2017) was believed to be shot with a poison arrow by poachers for his ivory in Tsavo National Park, Kenya. -->
@@ -346,16 +346,19 @@
 
       <!-- Richard Ladkani and Kief Davidson <em>The Ivory Game</em> (Netflix original, 2015) -->
 
-      <p class="linebreak small"><font class="title">Kamboyo &middot;&nbsp;Masthuele &middot;&nbsp;Isilo &middot;&nbsp;Tim</font></p>
-      <p class="small"><font class="small">James Currie <em>Last of the Big Tuskers</em> (film, 2018)</font></p>
+      <p class="linebreak small"><font class="title">Kamboyo &middot;&nbsp;Masthuele &middot;&nbsp;Isilo</font></p>
+      <p class="small"><font class="small">James Currie <em>Last of the Big Tuskers</em> (documentary, 2018)</font></p>
       <!-- Kamboyo (2014) died of old age in Tsavo Conservation Area, Kenya. https://tsavotrust.org/iconic-tusker-kamboyo-dies-naturally-of-old-age/ -->
       <!-- Masthuele (2014) died … in Kruger National Park, South Africa. -->
       <!-- Isilo (2017) died of old age in Tembe Elephant Park, South Africa. -->
-      <!-- Tim (2019) died of natural causes in Amboseli National Park, Kenya. -->
 
       <p class="linebreak small"><font class="title">Mimi &middot;&nbsp;Athena</font></p>
       <p class="small"><font class="small">Mark Deeble and Victoria Stone <em>The Elephant Queen</em> (Apple TV&plus; original, 2018)</font></p>
       <!-- Athena (2018) was not seen again … . -->
+
+      <p class="linebreak small"><font class="title">Tim</font></p>
+      <p class="small"><font class="small">Amboseli Trust for Elephants &ndash;&nbsp;Amboseli (c.1970-2020)</font></p>
+      <!-- Tim (2020) died of natural causes in Amboseli National Park, Kenya. -->
 
       <p class="linebreak small"><font class="title">Gaia</font></p>
       <p class="small"><font class="small">Elephants Without Borders &ndash;&nbsp;<em>Elephant</em> (Disney&plus; original, 2020)</font></p>
@@ -364,7 +367,7 @@
       <p class="small"><font class="small">Sheldrick Wildlife Trust &ndash;&nbsp;Ithumba (c.2016-2021)</font></p>
 
       <p class="linebreak small"><font class="title">Tolstoy</font></p>
-      <p class="small"><font class="small">Big Life Foundation &ndash;&nbsp;Amboseli (c.1971-2022)</font></p>
+      <p class="small"><font class="small">Amboseli Trust for Elephants &ndash;&nbsp;Amboseli (c.1971-2022)</font></p>
 
       <p class="linebreak small"><font class="title">Monsoon</font></p>
       <p class="small"><font class="small">Save the Elephants &ndash;&nbsp;Samburu (c.1960-2022)</font></p>
