--- a/url/-gov/fws-african-elephant-conservation-act/index.html
+++ b/url/-gov/fws-african-elephant-conservation-act/index.html
@@ -1,4 +1,4 @@
 <!doctype html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; url=https://www.fws.gov/law/african-elephant-conservation-act/" /></head></html>
+  <meta http-equiv="refresh" content="0; url=https://fws.gov/law/african-elephant-conservation-act/" /></head></html>
