--- a/url/-org/savetheelephants-counting-elephants/index.html
+++ b/url/-org/savetheelephants-counting-elephants/index.html
@@ -1,4 +1,4 @@
 <!doctype html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; url=https://www.savetheelephants.org/project/counting-elephants/" /></head></html>
+  <meta http-equiv="refresh" content="0; url=https://savetheelephants.org/project/counting-elephants/" /></head></html>
