--- a/404.html
+++ b/404.html
@@ -45,7 +45,7 @@
 
   <footer>
     <div class="quote">
-      <p class="small">Address any feedback to the secretariat at Animat Habitat [<a href="mailto:support@animathabitat.org" title="Secretary at Animat Habitat." target="_blank" rel="noopener">animathabitat</a>].<font class="fr">&nbsp;&#92;&nbsp;Envoyez-nous vos commentaires.</font></p>
+      <p class="small">Address any feedback to the secretariat at Animat Habitat [<a href="mailto:support@animathabitat.org" title="Secretariat at Animat Habitat." target="_blank" rel="noopener">animathabitat</a>].<font class="fr">&nbsp;&#92;&nbsp;Envoyez-nous vos commentaires.</font></p>
 
       <p class="linebreak small">Animat Habitat <a href="//animathabitat.orgsupport/" title="Animat Habitat support.">Sitemap</a>.<font class="fr">&nbsp;&#92;&nbsp;Plan du site Web.</font></p>
 
