--- a/c/2015-09/index.html
+++ b/c/2015-09/index.html
@@ -79,7 +79,7 @@
 
   <footer>
     <div class="quote">
-      <p class="small">Please address any questions or concerns about these Terms of Access to the secretariat at Animat Habitat [<a href="mailto:support@animathabitat.org" title="Secretary at Animat Habitat.">support&ndash;animathabitat.org</a>].</p>
+      <p class="small">Please address any questions or concerns about these Terms of Access to the secretariat at Animat Habitat [<a href="mailto:support@animathabitat.org" title="Secretariat at Animat Habitat.">support&ndash;animathabitat.org</a>].</p>
 
     </div>
 
