--- a/scene/one/elephant-conservation-amboseli/index.html
+++ b/scene/one/elephant-conservation-amboseli/index.html
@@ -132,8 +132,8 @@
       <div class="clear">
 
         <div class="quote" id="footnotes-4">
-          <p class="small"><sup>3</sup> Dupuis-D&eacute;sormeaux, M., Macdonald, S. &lsquo;Converging evidence for vanilla as an elephant attractant.&rsquo; 2012. <a href="../../../url/re/converging-evidence-for-vanilla-as-an-elephant-attractant/" target="_blank" title="Research Gate / Converging evidence for vanilla as an elephant attractant.">Download PDF</a></p>
-          <p class="small"><sup>4</sup> King, L. &lsquo;Human-elephant co-existence toolbox.&rsquo; Save the Elephants, Elephants and Bees Project. 2018. <a href="../../../url/-com/elephantsandbees-2018-h-e-c-toolbox-pdf/" target="_blank" title="Save the Elephants / Elephants and Bees / HEC Toolbox">Download PDF</a></p>
+          <p class="small"><sup>3</sup> Dupuis-D&eacute;sormeaux, M., Macdonald, S. &lsquo;Converging evidence for vanilla as an elephant attractant.&rsquo; 2012. <a href="../../../url/re/converging-evidence-for-vanilla-as-an-elephant-attractant/" target="_blank" title="Research Gate / Converging evidence for vanilla as an elephant attractant.">Download&nbsp;PDF</a></p>
+          <p class="small"><sup>4</sup> King, L. &lsquo;Human-elephant co-existence toolbox.&rsquo; Save the Elephants, Elephants and Bees Project. 2018. <a href="../../../url/-com/elephantsandbees-2018-h-e-c-toolbox-pdf/" target="_blank" title="Save the Elephants / Elephants and Bees / HEC Toolbox">Download&nbsp;PDF</a></p>
           <p class="small"><sup>5</sup> Big Life Foundation. &lsquo;Threading elephants through the eye of a needle.&lsquo; 2019. <a href="../../../url/-org/biglife-threading-elephants-through-the-eye-of-a-needle/" target="_blank" title="Big Life Foundation / Threading elephants through the eye of a needle.">Website&nbsp;Link</a></p>
 
         </div>
