--- a/url/-org/iucn-conservation-efforts-bring-cautious-hope-african-rhinos/index.html
+++ b/url/-org/iucn-conservation-efforts-bring-cautious-hope-african-rhinos/index.html
@@ -1,4 +1,4 @@
 <!doctype html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; url=https://www.iucn.org/news/species/202003/conservation-efforts-bring-cautious-hope-african-rhinos-iucn-red-list/" /></head></html>
+  <meta http-equiv="refresh" content="0; url=https://iucn.org/news/species/202003/conservation-efforts-bring-cautious-hope-african-rhinos-iucn-red-list/" /></head></html>
