--- a/scene/two/the-forest-the-trees/index.html
+++ b/scene/two/the-forest-the-trees/index.html
@@ -141,7 +141,7 @@
 
       <div class="clear">
         <img alt="" src="https://animathabitat.com/inc/img/~02/art/fan-kuan/kuan.travellers-by-streams-and-mountains.jpg" />
-        <p class="text-right gutter-side"><em>Travellers by Stream and Mountains</em>, Song Dynasty (960-1279) by Fan Kuan</p>
+        <p class="text-right gutter-side"><em>Travelers by Stream and Mountains</em>, Song Dynasty (960-1279) by Fan Kuan</p>
 
       </div>
 
