--- a/dono/index.html
+++ b/dono/index.html
@@ -104,9 +104,11 @@
         <div class="clear diptych">
 
           <div class="clear-top">
-            <a href="../url/-org/biglife-donate/" title="Big Life Foundation / Donate: Ranger Club" target="_blank" rel="noopener"><button>Big Life <font class="small">CA&dollar; US&dollar; UK&pound;</font></button></a>
+            <a href="../url/-org/biglife-donate/" title="Big Life Foundation / Donate: Ranger Club" target="_blank" rel="noopener"><button>Big Life <font class="small">Kenya</font></button></a>
             <p class="linebreak lineend">Support wildlife conservation projects at <a href="../url/-org/biglife/" title="Big Life Foundation" target="_blank" rel="noopener">Big Life Foundation</a> in the Greater Amboseli ecosystem.<font class="fr">&nbsp;&#92;&nbsp;Soutenir les projets de conservation dans l'&eacute;cosyst&egrave;me d'Amboseli, Kenya.</font></p>
           </div>
+
+          <!-- CA&dollar; US&dollar; UK&pound; -->
 
           <!-- <div>
             <a href="../url/-org/ehranamibia-adopt-an-elephant/" title="Elephant-Human Relations Aid, Namibia (EHRA) / Adopt an Elephant" target="_blank" rel="noopener"><button>EHRA &ndash; Namibia</button></a>
@@ -114,19 +116,25 @@
           </div> -->
 
           <div class="clear-top">
-            <a href="../url/-org/elephantswithoutborders-donate/" title="Elephants Without Borders (EWB) / Donate" target="_blank" rel="noopener"><button>EWB <font class="small">US&dollar;</font></button></a>
+            <a href="../url/-org/elephantswithoutborders-donate/" title="Elephants Without Borders (EWB) / Donate" target="_blank" rel="noopener"><button>EWB <font class="small">Botswana &plus;</font></button></a>
             <p class="linebreak lineend">Support wildlife conservation projects at <a href="../url/-org/elephantswithoutborders/" title="Elephants Without Borders (EWB)" target="_blank" rel="noopener">Elephants Without Borders</a> in Botswana.<font class="fr">&nbsp;&#92;&nbsp;Soutenir les projets de conservation de la nature au Botswana.</font></p>
           </div>
 
+          <!-- US&dollar; -->
+
           <div class="clear-top">
-            <a href="../url/-org/nationalgeographic-okavango-donate/" title="National Geographic / Donate: Okavango Wilderness Project (OWP)" target="_blank" rel="noopener"><button>NGOWP <font class="small">US&dollar;</font></button></a>
+            <a href="../url/-org/nationalgeographic-okavango-donate/" title="National Geographic / Donate: Okavango Wilderness Project (OWP)" target="_blank" rel="noopener"><button>NGOWP <font class="small">Botswana &plus;</font></button></a>
             <p class="linebreak lineend">Support <a href="../url/-org/nationalgeographic-okavango/" title="National Geographic / Okavango Wilderness Project (NGOWP)" target="_blank" rel="noopener">Okavango Wilderness Project</a> at National Geographic Society in Angola, Botswana.<font class="fr">&nbsp;&#92;&nbsp;Soutenir les projets de conservation dans le delta de l'Okavango.</font></p>
           </div>
 
+          <!-- US&dollar; -->
+
           <div class="clear-top">
-            <a href="../url/-org/sheldrickwildlifetrust-orphans/" title="Sheldrick Wildlife Trust (SWT) / Adopt an Elephant" target="_blank" rel="noopener"><button>SWT <font class="small">US&dollar;</font></button></a>
+            <a href="../url/-org/sheldrickwildlifetrust-orphans/" title="Sheldrick Wildlife Trust (SWT) / Adopt an Elephant" target="_blank" rel="noopener"><button>SWT <font class="small">Kenya</font></button></a>
             <p class="linebreak lineend">Support wildlife conservation projects at <a href="../url/-org/sheldrickwildlifetrust/" title="Sheldrick Wildlife Trust (SWT)" target="_blank" rel="noopener">Sheldrick Wildlife Trust</a> in Kenya.<font class="fr">&nbsp;&#92;&nbsp;Soutenez les projets de conservation de la nature au Kenya.</font></p>
           </div>
+
+          <!-- US&dollar; -->
 
         </div>
 
